# vibewatch

./: Cargo.toml  LICENSE  README.md  RELEASING.md  build.rs  install.sh  release.toml
assets/: palette-latte.css  palette-mocha.css  style.css
assets/sounds/: README.md
contrib/: vibewatch.service  waybar-module.jsonc  waybar-style.css
docs/superpowers/plans/: 2026-04-17-description-line-last-sentence.md  2026-04-17-n-button-approval.md  2026-04-17-widget-approval-ui.md  2026-04-22-stale-session-eviction.md
docs/superpowers/specs/: 2026-04-17-description-line-last-sentence-design.md  2026-04-17-n-button-approval-design.md  2026-04-17-widget-approval-ui-design.md  2026-04-22-stale-session-eviction-design.md
scripts/: release.sh
src/: approval.rs  config.rs  install.rs  ipc.rs  lib.rs  main.rs  mute.rs  notify.rs  scanner.rs  session.rs  sound.rs  transcript.rs  waybar.rs
src/compositor/: hyprland.rs  mod.rs  niri.rs
src/panel/: mod.rs  session_row.rs  window.rs
tests/: integration_test.rs
tests/fixtures/transcripts/claude/projects/-test-project/: cafe1234-0000-0000-0000-000000000001.jsonl  cafe1234-0000-0000-0000-000000000002.jsonl  cafe1234-0000-0000-0000-000000000003.jsonl  cafe1234-0000-0000-0000-000000000004.jsonl  cafe1234-0000-0000-0000-000000000006.jsonl  cafe1234-0000-0000-0000-000000000007.jsonl
tests/fixtures/transcripts/codex/sessions/2026/04/17/: rollout-2026-04-17T10-00-00-codex0001-0000-0000-0000-000000000001.jsonl  rollout-2026-04-17T10-01-00-codex0002-0000-0000-0000-000000000002.jsonl  (+1 more)
