[package]
name = "vibewatch"
version = "0.1.0"
edition = "2021"
description = "AI agent monitor for Wayland compositors"
license = "MIT"
repository = "https://github.com/moinax/vibewatch"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
dirs = "6"
thiserror = "2"
async-trait = "0.1"

# Compositor
hyprland = { version = "0.3", features = ["tokio"], optional = true }

# GUI (optional, only for panel subcommand)
gtk4 = { version = "0.9", features = ["v4_12"], optional = true }
libadwaita = { version = "0.7", optional = true }
gtk4-layer-shell = { version = "0.5", optional = true }

# Audio
rodio = { version = "0.19", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["panel", "sound", "hyprland-backend"]
panel = ["dep:gtk4", "dep:libadwaita", "dep:gtk4-layer-shell"]
sound = ["dep:rodio"]
hyprland-backend = ["dep:hyprland"]
